# imessage_email_alert

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci-cd.yml
docs/: Makefile  conf.py  example.ipynb  make.bat
src/imessage_email_alert/: __init__.py  __main__.py  email_alert.py  get_email_message.py  imessage_email_alert.py  messageTexter.applescript  send_imessage.py
tests/: test_imessage_email_alert.py
